--- a/index.html
+++ b/index.html
@@ -1118,33 +1118,38 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 
             <!-- Footer Links & Social Section -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12 text-center md:text-left pt-8 pb-16">
-                <div>
-                    <h3 class="text-2xl font-semibold mb-6">Quick Links</h3>
-                    <ul class="space-y-3 text-gray-300">
-                        <li><a href="#" class="hover:text-white transition duration-200">Landing</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Homepage</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">About</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Episodes</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Blog</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Contact</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-2xl font-semibold mb-6">Contact & Legal</h3>
-                    <ul class="space-y-3 text-gray-300">
-                        <li><a href="mailto:Divipodcast@support.com" class="hover:text-white transition duration-200">Divipodcast@support.com</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Privacy Policy</a></li>
-                        <li><a href="#" class="hover:text-white transition duration-200">Terms & Conditions</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-2xl font-semibold mb-6">Join the Conversation - Let's Connect!</h3>
-                    <div class="social-icons flex justify-center md:justify-start space-x-6 text-3xl">
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
+  <!-- Quick Links -->
+  <div>
+    <h3 class="text-2xl font-semibold mb-6">Quick Links</h3>
+    <div class="space-y-3 text-gray-300">
+      <a href="#" class="block hover:text-white transition duration-200">Landing</a>
+      <a href="#" class="block hover:text-white transition duration-200">Homepage</a>
+      <a href="#" class="block hover:text-white transition duration-200">About</a>
+      <a href="#" class="block hover:text-white transition duration-200">Episodes</a>
+      <a href="#" class="block hover:text-white transition duration-200">Blog</a>
+      <a href="#" class="block hover:text-white transition duration-200">Contact</a>
+    </div>
+  </div>
+
+  <!-- Contact & Legal -->
+  <div>
+    <h3 class="text-2xl font-semibold mb-6">Contact & Legal</h3>
+    <div class="space-y-3 text-gray-300">
+      <a href="mailto:Divipodcast@support.com" class="block hover:text-white transition duration-200">Divipodcast@support.com</a>
+      <a href="#" class="block hover:text-white transition duration-200">Privacy Policy</a>
+      <a href="#" class="block hover:text-white transition duration-200">Terms & Conditions</a>
+    </div>
+  </div>
+
+  <!-- Social Icons -->
+  <div>
+    <h3 class="text-2xl font-semibold mb-6">Join the Conversation - Let's Connect!</h3>
+    <div class="flex justify-center md:justify-start space-x-6 text-3xl">
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+      <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </div>
             </div>
 
             <!-- Copyright -->
