--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             </div>
 
             <!-- Footer Links & Social Section -->
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-12 text-center md:text-left pt-8 pb-16">
+            <div class="grid-cols-1 md:grid-cols-3 gap-12 text-center md:text-left pt-8 pb-16">
   <!-- Quick Links -->
   <div>
     <h3 class="text-2xl font-semibold mb-6">Quick Links</h3>
