--- a/index.html
+++ b/index.html
@@ -1117,40 +1117,52 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             </div>
 
             <!-- Footer Links & Social Section -->
-            <div class="grid-cols-1 md:grid-cols-3 gap-12 text-center md:text-left pt-8 pb-16">
-  <!-- Quick Links -->
+       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
+  
+  <!-- Try Grok On -->
   <div>
-    <h3 class="text-2xl font-semibold mb-6">Quick Links</h3>
-    <div class="space-y-3 text-gray-300">
-      <a href="#" class="block hover:text-white transition duration-200">Landing</a>
-      <a href="#" class="block hover:text-white transition duration-200">Homepage</a>
-      <a href="#" class="block hover:text-white transition duration-200">About</a>
-      <a href="#" class="block hover:text-white transition duration-200">Episodes</a>
-      <a href="#" class="block hover:text-white transition duration-200">Blog</a>
-      <a href="#" class="block hover:text-white transition duration-200">Contact</a>
+    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Try Grok On</h3>
+    <div class="space-y-2">
+      <a href="#" class="block hover:text-white transition">Web</a>
+      <a href="#" class="block hover:text-white transition">iOS</a>
+      <a href="#" class="block hover:text-white transition">Android</a>
+      <a href="#" class="block hover:text-white transition">Grok on X</a>
     </div>
   </div>
 
-  <!-- Contact & Legal -->
+  <!-- Products -->
   <div>
-    <h3 class="text-2xl font-semibold mb-6">Contact & Legal</h3>
-    <div class="space-y-3 text-gray-300">
-      <a href="mailto:Divipodcast@support.com" class="block hover:text-white transition duration-200">Divipodcast@support.com</a>
-      <a href="#" class="block hover:text-white transition duration-200">Privacy Policy</a>
-      <a href="#" class="block hover:text-white transition duration-200">Terms & Conditions</a>
+    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Products</h3>
+    <div class="space-y-2">
+      <a href="#" class="block hover:text-white transition">Grok</a>
+      <a href="#" class="block hover:text-white transition">API</a>
     </div>
   </div>
 
-  <!-- Social Icons -->
+  <!-- Company -->
   <div>
-    <h3 class="text-2xl font-semibold mb-6">Join the Conversation - Let's Connect!</h3>
-    <div class="flex justify-center md:justify-start space-x-6 text-3xl">
-      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-      <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-      <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Company</h3>
+    <div class="space-y-2">
+      <a href="#" class="block hover:text-white transition">Company</a>
+      <a href="#" class="block hover:text-white transition">Careers</a>
+      <a href="#" class="block hover:text-white transition">Contact</a>
+      <a href="#" class="block hover:text-white transition">News</a>
     </div>
   </div>
-            </div>
+
+  <!-- Resources -->
+  <div>
+    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Resources</h3>
+    <div class="space-y-2">
+      <a href="#" class="block hover:text-white transition">Documentation</a>
+      <a href="#" class="block hover:text-white transition">Privacy policy</a>
+      <a href="#" class="block hover:text-white transition">Security</a>
+      <a href="#" class="block hover:text-white transition">Legal</a>
+      <a href="#" class="block hover:text-white transition">Status</a>
+    </div>
+  </div>
+
+       </div>
 
             <!-- Copyright -->
             <div class="text-center text-sm text-gray-500 pt-8 pb-4">
