--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             </div>
 
             <!-- Footer Links & Social Section -->
-       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
+       <div class="grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
   
   <!-- Try Grok On -->
   <div>
