--- a/index.html
+++ b/index.html
@@ -1117,52 +1117,49 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             </div>
 
             <!-- Footer Links & Social Section -->
-       <div class="grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
-  
-  <!-- Try Grok On -->
-  <div>
-    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Try Grok On</h3>
-    <div class="space-y-2">
-      <a href="#" class="block hover:text-white transition">Web</a>
-      <a href="#" class="block hover:text-white transition">iOS</a>
-      <a href="#" class="block hover:text-white transition">Android</a>
-      <a href="#" class="block hover:text-white transition">Grok on X</a>
-    </div>
-  </div>
-
-  <!-- Products -->
-  <div>
-    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Products</h3>
-    <div class="space-y-2">
-      <a href="#" class="block hover:text-white transition">Grok</a>
-      <a href="#" class="block hover:text-white transition">API</a>
-    </div>
-  </div>
-
-  <!-- Company -->
-  <div>
-    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Company</h3>
-    <div class="space-y-2">
-      <a href="#" class="block hover:text-white transition">Company</a>
-      <a href="#" class="block hover:text-white transition">Careers</a>
-      <a href="#" class="block hover:text-white transition">Contact</a>
-      <a href="#" class="block hover:text-white transition">News</a>
-    </div>
-  </div>
-
-  <!-- Resources -->
-  <div>
-    <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Resources</h3>
-    <div class="space-y-2">
-      <a href="#" class="block hover:text-white transition">Documentation</a>
-      <a href="#" class="block hover:text-white transition">Privacy policy</a>
-      <a href="#" class="block hover:text-white transition">Security</a>
-      <a href="#" class="block hover:text-white transition">Legal</a>
-      <a href="#" class="block hover:text-white transition">Status</a>
-    </div>
-  </div>
-
-       </div>
+ <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
+        <!-- Try Grok On -->
+        <div>
+          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Try Grok On</h3>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-white transition-colors duration-200">Web</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">iOS</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Android</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Grok on X</a>
+          </div>
+        </div>
+        <!-- Products -->
+        <div>
+          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Products</h3>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-white transition-colors duration-200">Grok</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">API</a>
+          </div>
+        </div>
+        <!-- Company -->
+        <div>
+          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Company</h3>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-white transition-colors duration-200">Company</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Careers</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Contact</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">News</a>
+          </div>
+        </div>
+        <!-- Resources -->
+        <div>
+          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Resources</h3>
+          <div class="space-y-2">
+            <a href="#" class="block hover:text-white transition-colors duration-200">Documentation</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Privacy policy</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Security</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Legal</a>
+            <a href="#" class="block hover:text-white transition-colors duration-200">Status</a>
+          </div>
+        </div>
+      </div>
+ </div>
 
             <!-- Copyright -->
             <div class="text-center text-sm text-gray-500 pt-8 pb-4">
