--- a/index.html
+++ b/index.html
@@ -1117,49 +1117,35 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
             </div>
 
             <!-- Footer Links & Social Section -->
- <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-12 text-left pt-8 pb-16 text-gray-300">
-        <!-- Try Grok On -->
-        <div>
-          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Try Grok On</h3>
-          <div class="space-y-2">
-            <a href="#" class="block hover:text-white transition-colors duration-200">Web</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">iOS</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Android</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Grok on X</a>
-          </div>
-        </div>
-        <!-- Products -->
-        <div>
-          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Products</h3>
-          <div class="space-y-2">
-            <a href="#" class="block hover:text-white transition-colors duration-200">Grok</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">API</a>
-          </div>
-        </div>
-        <!-- Company -->
-        <div>
-          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Company</h3>
-          <div class="space-y-2">
-            <a href="#" class="block hover:text-white transition-colors duration-200">Company</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Careers</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Contact</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">News</a>
-          </div>
-        </div>
-        <!-- Resources -->
-        <div>
-          <h3 class="text-sm tracking-widest font-semibold text-gray-400 mb-4 uppercase">Resources</h3>
-          <div class="space-y-2">
-            <a href="#" class="block hover:text-white transition-colors duration-200">Documentation</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Privacy policy</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Security</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Legal</a>
-            <a href="#" class="block hover:text-white transition-colors duration-200">Status</a>
-          </div>
-        </div>
-      </div>
- </div>
+  <div class="flex flex-col md:flex-row md:justify-between gap-12 text-center md:text-left pt-8 pb-16">
+                <div class="flex-1 min-w-[200px]"> <!-- Added flex-1 and min-width for proportional sizing -->
+                    <h3 class="text-2xl font-semibold mb-6">Quick Links</h3>
+                    <ul class="space-y-3 text-gray-300">
+                        <li><a href="#" class="hover:text-white transition duration-200">Landing</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Homepage</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">About</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Episodes</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Blog</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="flex-1 min-w-[200px]"> <!-- Added flex-1 and min-width for proportional sizing -->
+                    <h3 class="text-2xl font-semibold mb-6">Contact & Legal</h3>
+                    <ul class="space-y-3 text-gray-300">
+                        <li><a href="mailto:Divipodcast@support.com" class="hover:text-white transition duration-200">Divipodcast@support.com</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Privacy Policy</a></li>
+                        <li><a href="#" class="hover:text-white transition duration-200">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="flex-1 min-w-[200px]"> <!-- Added flex-1 and min-width for proportional sizing -->
+                    <h3 class="text-2xl font-semibold mb-6">Join the Conversation - Let's Connect!</h3>
+                    <div class="social-icons flex justify-center md:justify-start space-x-6 text-3xl">
+                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+  </div>
 
             <!-- Copyright -->
             <div class="text-center text-sm text-gray-500 pt-8 pb-4">
