--- a/index.html
+++ b/index.html
@@ -730,27 +730,27 @@ Connect every element of your workflow to build a dynamic knowledge base. Soon, 
 <div class="card-grid relative flex flex-col items-center gap-6 md:block">
 <!-- Image 1 -->
 <div class="md:absolute md:top-[120px] md:left-[100px] z-[2px]">
-<img src="create-task.png" alt="create tasks"
+<img src="1.png" alt="create tasks"
 class="w-[360px] h-[240px] md:w-[534px] md:h-[508px] rounded-[20px] " />
 </div>
 <!-- Image 2 -->
 <div class="md:absolute md:top-[140px] md:left-[670px]">
-<img src="take-notes.png" alt="take notes"
+<img src="2.png" alt="take notes"
 class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
 </div>
 <!-- Image 3 -->
 <div class="md:absolute md:top-[400px] md:left-[400px]">
-<img src="sync.png" alt="Sync"
+<img src="3.png" alt="Sync"
 class="w-[360px] h-[240px] md:w-[520px] md:h-[232px] rounded-[20px] shadow-xl bg-[#111]" />
 </div>
 <!-- Image 4 -->
 <div class="md:absolute md:top-[650px] md:left-[400px]">
-<img src="chat.png" alt="chat"
+<img src="4.png" alt="chat"
 class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
 </div>
 <!-- Image 5 -->
 <div class="md:absolute md:top-[650px] md:left-[670px]">
-<img src="manage.png" alt="manage"
+<img src="5.png" alt="manage"
 class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
 </div></div>
 
